--- a/Css/styles.css
+++ b/Css/styles.css
@@ -3,7 +3,160 @@
    padding: 0;
    box-sizing: border-box;
 }
-
-.header {
+/* Header Section */
+.header-contianer {
+   font-family: 'Gruppo', sans-serif;
+   color: #acacac;
    background-color: #424141;
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
 }
+
+.logo_image {
+   margin-left: 40px ;
+   padding: 20px;
+}
+
+.menu {
+   width: 50%;
+   padding: 40px 0;
+   margin-right: 40px;
+}
+.items {
+   font-weight: bold;
+   /* padding: 20px; */
+   display: flex;
+   justify-content: space-evenly;
+   align-items: center;
+   list-style: none;
+   font-size: 1.3rem;
+}
+.item {
+   padding: 0 10px;
+}
+
+/* Banner section */
+.banner-container {
+   height: 80vh;
+   padding: 20px;
+   display: flex;
+   justify-content: space-around;
+   align-items: center;
+}
+.container-background {
+   background-image: url('../images/background.png'), linear-gradient(45deg, #020202, #353535);
+}
+
+
+.banner-text>h1 {
+   font-family: 'Acme', sans-serif;
+   font-size: 3.5rem;
+   color: #dfdfdf;
+
+}
+.banner-text>p {
+   padding: 20px 0;
+   font-family: 'Alegreya', serif;
+   font-size: 1.5rem;
+   color: aliceblue;
+}
+
+.btn {
+   font-family: 'Gruppo', sans-serif;
+   color: #f3f3f3;
+   padding: 15px;
+   font-size: 1.5rem;
+
+   font-weight: bold;
+   background-color: rgb(255, 102, 0);
+   border: none;
+   border-radius: 5px;
+   cursor: pointer;
+}
+.btn:hover {
+   background-color: #fd8f00;
+   color: #fff;
+}
+
+.banner-image>img {
+   width: 400px;
+}
+
+/* About Us Section */
+.about-title {
+   font-size: 4rem;
+   text-align: center;
+   padding: 20px;
+}
+
+.about-container {
+   display: flex;
+   flex-direction: row-reverse;
+   justify-content: space-around;
+   /* align-items: center; */
+   padding: 20px;
+}
+.about-text>h1 {
+font-size: 2rem;
+/* padding: 10px 0; */
+}
+.about-text>p {
+   font-family: 'Fira Sans', sans-serif;
+   max-width: 600px;
+   font-size: 1.2rem;
+   padding: 10px 0;
+}
+
+/* Our Service */
+.our-service-container {
+   color: #dfdfdf;
+
+}
+
+.service-title {
+   font-size: 4rem;
+   text-align: center;
+   padding: 30px ;
+}
+
+.our-service-box-container {
+   max-width: 1200px;
+   margin: 0 auto;
+   padding: 20px 15px 50px;
+   display: flex;
+   justify-content: space-around;
+}
+.service-items {
+   max-width: 280px;
+   box-shadow: 4px 20px 90px gray;
+   border-radius: 10px;
+   text-align: center;
+   padding: 20px;
+}
+
+.service-icon {
+   width: 75px;
+   padding: 15px 0;
+}
+
+.service-items>h1 {
+   padding-bottom: 10px;
+}
+.service-items>p {
+   text-align: center;
+   padding: 10px 0;
+}
+
+.service-btn {
+   padding: 15px 20px;
+   margin: 10px;
+}
+
+/* Footer Section */
+
+
+
+
+
+
